--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,37 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-  }
+html{
+  font-size: 62.5%;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.nav-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 24px 32px;
+}
+
+.nav-button a{
+  text-decoration: none;
+  border: 2px solid #ccc;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: black;
+  padding: 1.3rem 2rem;
+  border-radius: 2.5rem;
+  transition: border 0.15s;
+  align-items: center;
+  font-family: "Roboto";
+  font-weight: 500;
+}
+
+.nav-button a:hover{
+  border: 2px solid black;
+}
+
+.nav-logo{
+  cursor: pointer;
+}
