Fixing some bugs in rating component.

--- a/components/rating.html
+++ b/components/rating.html
@@ -17,7 +17,8 @@
     </div>
     <div class="rating-trust">
       <div>
-        <p>Trustpilot</p>
+        <img class="star" width="20px" src="images/star.png" alt="" />
+        <p class="trustpilot">Trustpilot</p>
       </div>
       <img class="rating-4" src="images/rating4.5.png" alt="4.5 rating logo" />
       <p>TrustScore <strong>4.7 2,153</strong> reviews</p>
