--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -171,7 +171,8 @@ html{
   display: flex;
   padding-right: 2rem;
   border-right: 1px solid #ccc;
-  
+  height: 30px;
+  justify-content: center;
 }
 
 .rating-content{
@@ -214,6 +215,11 @@ html{
 
 }
 
+.rating-trust .star{
+  float: left;
+  margin-right: 2px;
+}
+
 .rating-trust .rating-4{
   width: 100px;
 }
@@ -224,9 +230,9 @@ html{
   font-family: "Roboto";
 }
 
-.rating-trust p:first-child{
+.rating-trust .trustpilot{
+  font-size: 1.5rem;
   font-weight: 500;
-  font-size: 1.8rem;
 }
 
 .rating-os img{
