--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,6 +7,16 @@ html{
   margin: 0 auto;
 }
 
+.container-2{
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.grid{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
 /* nav-bar */
 
 .nav-content {
@@ -100,10 +110,7 @@ html{
   width: 100%;
 }
 
-.grid{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
+
 
 .hero-down-content{
   display: flex;
@@ -243,4 +250,75 @@ html{
 
 .rating-os{
   display: inline-block;
+}
+
+
+/* features */
+.features{
+  margin-top: 10rem;
+}
+
+.feature-heading h2{
+  font-size: 3.5rem;
+  font-family: "Lato";
+  font-weight: 900;
+  max-width: inherit;
+  width: 100%;
+  text-align: center;
+}
+
+.feature-heading p{
+  font-size: 2rem;
+  color: rgb(102, 102, 102);
+  font-family: "Lato";
+  text-align: center;
+  line-height: 1.5;
+}
+
+.feature-heading{
+  margin-bottom: 10rem;
+}
+
+.feature{
+  margin-bottom: 9rem;
+}
+
+.feature-2 .feature_content{
+  margin-left: -3rem;
+}
+
+.feature-2 .feature-video{
+  margin-left: 3rem;
+}
+
+.feature-4 .feature_content{
+  margin-left: -3rem;
+}
+
+.feature-video video{
+  max-width: 500px;
+  width: 100%;
+}
+
+.feature_content h2{
+  font-size: 2.2rem;
+  font-family: "montserrat";
+}
+
+.feature_content p{
+  font-size: 2rem;
+  line-height: 1.2;
+  color: rgb(102, 102, 102);
+  font-family: "Lato";
+  line-height: 1.5;
+  margin-top: 0;
+}
+
+.feature_content{
+  max-width: 400px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 8rem;
 }
