--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -322,3 +322,94 @@ html{
   justify-content: center;
   margin-left: 8rem;
 }
+
+/* courses */
+
+.courses{
+  background-color: rgb(248, 248, 248);
+  padding: 6rem 4rem;
+}
+
+.course-heading{
+  font-size: 2.5rem;
+  font-weight: 900;
+  font-family: "Lato";
+  text-align: center;
+}
+
+.course-subjects p{
+  font-size: 1.5rem;
+  font-weight: 900;
+  font-family: "Lato";
+  transition: all 0.2s;
+  align-items: center;
+  
+}
+
+.course-subjects{
+  display: flex;
+  justify-content: space-around;
+  color: rgb(97, 109, 116);
+}
+
+.course-subjects p:hover {
+  cursor: pointer;
+  color: #000;
+}
+
+.course-subjects p:focus{
+  border: 1px solid #ccc;
+  background-color: #fff;
+  color: #000;
+  padding: 1rem 1.5rem;
+  border-radius: 0.5rem;
+}
+
+
+.course-electives img{
+  float: left;
+  max-width: 2.5rem;
+  width: 100%;
+  margin-right: 1rem;
+}
+
+.course-video video{
+  max-width: 800px;
+  width: 100%;
+}
+
+.course-electives{
+  max-width: 300px;
+  width: 100%;
+}
+
+.course-electives p{
+  font-size: 1.7rem;
+  margin-bottom: 2rem;
+  font-weight: 500;
+}
+
+.course-content{
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-between;
+  font-family: "Lato";
+}
+
+.video-header{
+  background-color: rgb(40, 40, 40);
+  color: #fff;
+  text-align: center;
+  padding: 1rem;
+}
+
+.video-header p{
+  font-weight: 900;
+  letter-spacing: 1px;
+}
+
+.course-video{
+  box-shadow: 10px 10px;
+  border: 1px solid #000;
+  border-radius: 3px;
+}
