--- a/components/courses.html
+++ b/components/courses.html
@@ -49,5 +49,19 @@
         <video autoplay loop muted src="videos/electives.mp4"></video>
       </div>
     </div>
+    <div class="course-footer">
+      <p>
+        All of our 70+ courses are crafted by award-winning teachers,
+        researchers, and professionals from:
+      </p>
+      <div class="course-footer_companies">
+        <img src="images/caltech.webp" alt="" />
+        <img src="images/mit.webp" alt="" />
+        <img src="images/duke.webp" alt="" />
+        <img src="images/microsoft.webp" alt="" />
+        <img src="images/google.webp" alt="" />
+        <p>AND MANY MORE...</p>
+      </div>
+    </div>
   </div>
 </div>
