--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -448,3 +448,52 @@ html{
   opacity: 0.7;
   max-width: 60px;
 }
+
+/* downloads */
+
+.downloads{
+  background-color: #fff;
+  display: flex;
+  padding: 8rem 13rem;
+  justify-content: space-between;
+}
+
+.download-left-content{
+  max-width: 600px;
+}
+
+.download-left-content h2{
+  font-size: 4.5rem;
+  font-weight: 900;
+  font-family: "Lato";
+  word-spacing: 5px;
+  letter-spacing: 1px;
+  line-height: 1.2;
+}
+
+.download-right-content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 6rem;
+  margin-top: 6rem;
+}
+
+.download-right-content p{
+  margin: 5px;
+  font-family: "Roboto";
+  font-size: 1.5rem;
+}
+
+.download-rating{
+  width: 12rem;
+  margin-top: 1.5rem;
+}
+
+.app-store, .play-store{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
